--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ figcaption{padding:10px 12px 9px;border-left:24px solid #bbb}
 q,cite,.footer hr{margin:16px 0}
 .box ul{margin:12px 0 8px;padding:0;line-height:160%}
 .navbut{margin:0}
-.navbut a{border-style:solid;padding:7px 10px 5px;margin-top:22px;margin:22px 12px 0 0}
+.navbut a{border-style:solid;padding:7px 10px 5px;margin:22px 12px 0 0}
 .prev{border-width:1px 1px 2px 10px;border-color:#bbb}
 .top{border-width:1px 1px 2px 1px;border-color:#aaa}
 .next{border-width:1px 10px 2px 1px;border-color:#aaa}
