--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body{background:#ddd;min-height:100vh}
 @font-face{font-family:LeagueSpartan;src:url(fonts/LeagueSpartan-Regular.woff2)format(woff2),url(fonts/LeagueSpartan-Regular.woff)format(woff);font-display:swap}
 @font-face{font-family:Barlow;font-weight:900;src:url(fonts/Barlow-ExtraBold.woff2)format(woff2),url(fonts/Barlow-ExtraBold.woff)format(woff);font-display:swap}
 ::selection{background:orange}
-a{padding:7px 12px 4px 10px;margin:-5px -8px -5px -10px}
+a{padding:7px 12px 4px 10px;margin:-5px -8px -5px -10px;border-radius:10px}
 a:hover{background:#000;color:#fff;border-color:#777}
 .icon:hover{background:0;opacity:.6}
 .icon{padding:5px;height:28px}
@@ -16,7 +16,7 @@ li a,.box,q,cite,img,.logo{display:block}
 li,h2,.title{width:fit-content}
 p,p a,q,li,em,.listbox a{font-family:LeagueSpartan,sans-serif}
 .header ul{padding:0 4px 0 10px;vertical-align:top}
-.menu{float:right;padding:5% 5% 5% 0;line-height:150%}
+.menu{float:right;padding:5%;padding:4% calc(3% + 18px) 5% 2%;line-height:150%;background:#e7e7e7;border-radius:0 0 24px 24px;margin-right:-18px}
 .logo{padding:0}
 .logo:hover{filter:saturate(99)}
 .header{max-width:780px}
@@ -49,7 +49,6 @@ figure{max-width:720px}
 .box ul{line-height:175%;padding:12px 5% 14px;background:#d0d0d0;border-top:2px #aaa solid}
 .listbox{padding:0;overflow:hidden;background:#c4c4c4}
 .listbox div{padding:12px 5%}
-.listbox a{border-radius:10px}
 summary{cursor:pointer;padding:12px 3%;margin:8px;background:#b3b3b3;border-radius:12px}
 summary:hover{background:#aaa}
 summary:active{background:#a0a0a0}
