update css design

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body{background:#ddd;min-height:100vh}
 @font-face{font-family:LeagueSpartan;src:url(fonts/LeagueSpartan-Regular.woff2)format(woff2),url(fonts/LeagueSpartan-Regular.woff)format(woff);font-display:swap}
 @font-face{font-family:Barlow;font-weight:900;src:url(fonts/Barlow-ExtraBold.woff2)format(woff2),url(fonts/Barlow-ExtraBold.woff)format(woff);font-display:swap}
 ::selection{background:orange}
-a{padding:7px 12px 4px 10px;margin:-5px -8px -5px -10px;border-radius:10px}
+a{padding:7px 12px 4px 10px;margin:-5px -8px -5px -10px;border-radius:16px}
 a:hover{background:#000;color:#fff;border-color:#777}
 .icon:hover{background:0;opacity:.5}
 .icon{padding:5px;height:28px}
@@ -12,7 +12,7 @@ li{list-style:none;padding:4px 10px;margin:0 -10px}
 li a,.box,q,cite,img,.logo{display:block}
 .footer a,.header div,.navbut a,.highlight,.main>img,figure,.header ul,.main>h2{display:inline-block}
 li,h2,.title{width:fit-content}
-p,p a,q,li,em,.listbox a{font-family:LeagueSpartan,sans-serif}
+p,p a,q,li,em,.listbox a,.navbut a{font-family:LeagueSpartan,sans-serif}
 .header ul{padding:0 4px 0 10px;vertical-align:top}
 .menu{float:right;padding:5%;padding: 3% 3% 5% 2%;line-height:150%;background:#e7e7e7;  border-radius:0 0 min(calc(5vw - 20px), 24px) 24px}
 .logo{padding:0;transition:filter .75s}
@@ -32,14 +32,14 @@ h4{font-size:1.85rem;margin:0 0 8px}
 h5{font-size:1.65rem;margin:16px 0}
 p{line-height:170%;margin:8px 0}
 .main>p{text-indent:.5em}
-p a{text-decoration:underline 2px;padding:9px 5px 5px;margin:0 -5px;border-radius: 6px;}
+p a{text-decoration:underline 2px;padding:9px 5px 5px;margin:0 -5px;border-radius: 8px;}
 .main>*,.title hr{margin:0 0 16px}
 .title{margin:2% 0 -16px 2%}
 .title hr{height:30px;background:#b3b3b3;position:relative;top:-20px;left:-16px;z-index:-1;width:50%;min-width:150px;border-radius:8px}
-.box{padding:16px 5%;border-radius:20px}
+.box{padding:16px 5%;border-radius:28px}
 .clickbox{border:1px solid #999;padding:4px;border-bottom-width:2px}
 .clickimg{min-height:134px}
-.clickbox img{float:left;margin:0 16px 8px 0;border-radius:16px !important}
+.clickbox img{float:left;margin:0 16px 8px 0;border-radius:26px !important}
 .clickdiv{padding:12px 15px}
 .clickbox:hover,.listbox{background:#d0d0d0}
 figure{max-width:720px}
@@ -48,9 +48,9 @@ figure{max-width:720px}
 .box ul{line-height:175%;padding:12px 5% 14px;background:#d0d0d0}
 .listbox{padding:0;overflow:hidden;background:#c4c4c4}
 .listbox div{padding:16px 5% 14px}
-summary{cursor:pointer;padding:12px 3%;margin:8px;background:#b3b3b3;border-radius:12px}
-summary:hover,.next:hover,.prev:hover{filter:brightness(.95);}
-summary:active,.next:active,.prev:active{filter:brightness(.9);}
+summary{cursor:pointer;padding:12px 3%;margin:8px;background:#b3b3b3;border-radius:20px}
+summary:hover{filter:brightness(.95)}
+summary:active{filter:brightness(.9)}
 .text{background:#c4c4c4;border-left:16px solid #b2b2b2}
 hr{background:#aaa;height:2px}
 hr,.borderless{border:0}
@@ -58,17 +58,19 @@ hr,.borderless{border:0}
 .info{border-left:32px solid #555;background:#666;font-weight:600}
 figcaption{padding:10px 4%;background:#c4c4c4;margin-top:8px;border-radius:24px;}
 q,cite{margin:16px 0}
-.navbut{margin:0}
-.navbut a{padding:8px 16px;margin:16px 12px 0 0;border-radius:100vh;color:#000}
+.navbut{margin:0}.navbut a:hover{background:#aaa}.navbut a:active{background:#999}
+.navbut a{padding:18px 26px 16px;margin:16px 12px 0 0;border-radius:32px;color:#000}
+.navbut a img{display:inline;height:18px}
 .prev{background:#ccc}
+.up{background:#d0d0d0}
 .next{background:#bbb}
-pre{padding:16px 2%;overflow:auto;background:#444;border-left:20px solid #333;font-size:.9rem;border-radius:20px}
+pre{padding:16px 2%;overflow:auto;background:#444;border-left:20px solid #333;font-size:.9rem;border-radius:28px}
 .info,code{color:#fff}
 code{font-family:monospace}
 q{font-size:large}
 img,iframe{max-width:100%;height:auto}
-.main img, .main figure{border-radius:20px}
+.main img, .main figure{border-radius:28px}
 picture img{width:auto}
 .highlight{width:100%}
-.highlight img{margin:16px 0 16px -26px;margin-left:calc(-1 * min(4vw,26px));border-radius:0 20px 20px 0}
+.highlight img{margin:16px 0 16px -26px;margin-left:calc(-1 * min(4vw,26px));border-radius:0 28px 28px 0}
 kbd{border:1px solid;padding:4px 14px 3px;border-radius:10px;border-bottom:2px solid;background:#c4c4c4;border-color:grey;margin-left:4px;font-size:large}
