fix highlight images

--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,13 @@ body{background:#ddd;min-height:100vh}
 @font-face{font-family:LeagueSpartan;src:url(fonts/LeagueSpartan-Regular.woff2)format(woff2),url(fonts/LeagueSpartan-Regular.woff)format(woff);font-display:swap}
 @font-face{font-family:Barlow;font-weight:900;src:url(fonts/Barlow-ExtraBold.woff2)format(woff2),url(fonts/Barlow-ExtraBold.woff)format(woff);font-display:swap}
 ::selection{background:orange}
-a{padding:7px 14px 4px 10px;margin:-5px -8px -5px -10px;border-radius:16px}
-a:hover{background:#000;color:#fff;border-color:#777}
+a{padding:7px 14px 4px 10px;margin:-5px -8px -5px -10px;border-radius:16px;text-decoration-color:#aaa}
+a:hover{background:#000;color:#fff;border-color:#777;text-decoration-color:#000}
 .icon:hover{background:0;opacity:.5}
 .icon{padding:5px;height:28px}
 li{list-style:none;padding:4px 10px;margin:0 -10px}
 li a,.box,q,cite,img,.logo{display:block}
-.footer a,.header div,.navbut a,.highlight,.main>img,figure,.main>h2{display:inline-block}
+.footer a,.header div,.navbut a,.main>h2{display:inline-block}
 li,h2,.title{width:fit-content}
 .header ul{padding:5px;background:#d0d0d0;border-radius:30px;width:clamp(103px,230vw - 1280px, 471px);line-height:clamp(12px,230vw - 1280px,20px)}
 .menu li{display:inline-block;margin:0;padding:0}
@@ -29,13 +29,13 @@ h2{font-size:2.25em;margin:2px 0 4px}
 .main>h2{border-bottom:6px solid #bbb}
 .main>h3{border-left:8px solid #bbb;padding-left:8px}
 .main>h4{font-size:1.6rem;margin:0 0 8px}
-.main>h4::before{content:"⚬ ";color:#888;}
+.main>h4::before{content:"⚬ ";color:#888}
 h3{font-size:2rem;margin:0 0 8px}
 h4{font-size:1.85rem;margin:0 0 8px}
 h5{font-size:1.65rem;margin:16px 0}
 p{line-height:170%;margin:8px 0}
 .main>p{text-indent:.5em}
-p a{text-decoration:underline 2px;padding:9px 5px 5px;margin:0 -5px;border-radius: 8px;}
+p a{text-decoration:underline;text-decoration-thickness:2px;padding:9px 5px 5px;margin:0 -5px;border-radius:8px}
 .main>*,.title hr{margin:0 0 16px}
 .title{margin:2% 0 -0 2%;display:inline-block}
 .title hr{height:30px;background:#b3b3b3;position:relative;top:-20px;left:-12px;z-index:-1;width:50%;min-width:150px;border-radius:8px;margin-bottom:-4px}
@@ -59,7 +59,7 @@ hr{background:#aaa;height:2px}
 hr,.borderless{border:0}
 .main>hr{margin:42px 0;height:4px;background:#ccc}
 .info{border-left:32px solid #555;background:#666;font-weight:600}
-figcaption{padding:10px 4%;background:#c4c4c4;margin-top:8px;border-radius:24px;}
+figcaption{padding:10px 4%;background:#c4c4c4;margin-top:8px;border-radius:24px}
 q,cite{margin:16px 0}
 .navbut{margin:0}.navbut a:hover{background:#aaa}.navbut a:active{background:#999}
 .navbut a{padding:18px 26px 16px;margin:16px 12px 0 0;border-radius:32px;color:#000}
@@ -74,7 +74,6 @@ q{font-size:large}
 img,iframe{max-width:100%;height:auto}
 .main img, .main figure{border-radius:28px}
 picture img{width:auto}
-.highlight{width:100%}
-.highlight img{margin:16px 0 16px -26px;margin-left:calc(-1 * min(4vw,26px));border-radius:0 28px 28px 0}
+.highlight{margin:16px 0 16px -26px;margin-left:calc(-1 * min(4vw,26px));border-radius:0 28px 28px 0 !important}
 kbd{border:1px solid;padding:4px 14px 3px;border-radius:10px;border-bottom:2px solid;background:#c4c4c4;border-color:grey;margin-left:4px;font-size:large}
-.underline{color:inherit;text-decoration:2px underline #aaa}
+.underline{color:inherit;text-decoration:underline;text-decoration-color:inherit;text-decoration-thickness:2px}
