--- a/css/style.css
+++ b/css/style.css
@@ -26,15 +26,16 @@ li,h2,.title{width:fit-content}
 h1,h2,h3,h4,h5{font-family:Barlow,sans-serif}
 h1{font-size:3.3em;font-size:clamp(2.5em,10vw,3.3em);line-height:1.1em}
 h2{font-size:2.25em;margin:2px 0 4px}
+h3{font-size:2rem;margin:0 0 8px}
+h4{font-size:1.5rem;margin:0 0 8px}
+h5{font-size:1.65rem;margin:16px 0}
 .main>h2{border-bottom:6px solid #bbb}
 .main>h3{border-left:8px solid #bbb;padding-left:8px}
-.main>h4{font-size:1.6rem;margin:0 0 8px}
+.main>h4{font-size:1.5rem;margin:0 0 8px}
 .main>h4::before{content:"⚬ ";color:#888}
-h3{font-size:2rem;margin:0 0 8px}
-h4{font-size:1.85rem;margin:0 0 8px}
-h5{font-size:1.65rem;margin:16px 0}
 p{line-height:170%;margin:8px 0}
 .main>p{text-indent:.5em}
+.main>hr{margin:42px 0;height:3px;background:#ccc}
 p a{text-decoration:underline;text-decoration-thickness:2px;padding:9px 5px 5px;margin:0 -5px;border-radius:8px}
 .main>*,.title hr{margin:0 0 16px}
 .title{margin:2% 0 -0 2%;display:inline-block}
@@ -51,14 +52,13 @@ figure{max-width:720px}
 .box ul{line-height:175%;padding:12px 5% 14px;background:#d0d0d0}
 .listbox{padding:0;overflow:hidden;background:#c4c4c4}
 .listbox div{padding:16px 5% 14px}
+.listbox p{margin-bottom:0}
 summary{cursor:pointer;padding:12px 3%;margin:8px;background:#b3b3b3;border-radius:20px}
 summary:hover{filter:brightness(.95)}
 summary:active{filter:brightness(.9)}
 .text{background:#c4c4c4;border-left:16px solid #b2b2b2}
 hr{background:#aaa;height:2px}
 hr,.borderless{border:0}
-.main>hr{margin:42px 0;height:4px;background:#ccc}
-.info{border-left:32px solid #555;background:#666;font-weight:600}
 figcaption{padding:10px 4%;background:#c4c4c4;margin-top:8px;border-radius:24px}
 q,cite{margin:16px 0}
 .navbut{margin:0}.navbut a:hover{background:#aaa}.navbut a:active{background:#999}
@@ -67,8 +67,10 @@ q,cite{margin:16px 0}
 .prev{background:#ccc}
 .up{background:#d0d0d0}
 .next{background:#bbb}
-pre{padding:16px 2%;overflow:auto;background:#444;border-left:20px solid #333;font-size:.9rem;border-radius:28px}.border_button{background:0;border:3px solid #bbb;padding:14px 18px 12px !important}
-.info,code{color:#fff}
+pre{padding:21px 4%;overflow:auto;background:#333;font-size:.9rem;border-radius:28px}
+.border_button{background:0;border:3px solid #bbb;padding:14px 18px 12px !important}
+.info,code{color:#eee}
+.info{border-left:min(4vw,32px) solid #666;background:#777;line-height:150%}
 code{font-family:monospace}
 q{font-size:large}
 img,iframe{max-width:100%;height:auto}
