--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,24 @@
 body,p,hr,h1,h3,h4,h5,ul,.logo,.footer a,.clickbox p{margin:0}
 body{background:#ddd;min-height:100vh}
-*{color:#000;font-family:LeagueSpartan,sans-serif;text-rendering:optimizeSpeed;text-decoration:none}
+*{color:#111;font-family:LeagueSpartan,sans-serif;text-rendering:optimizeSpeed;text-decoration:none}
 @font-face{font-family:LeagueSpartan;src:url(fonts/LeagueSpartan-Regular.woff2)format(woff2),url(fonts/LeagueSpartan-Regular.woff)format(woff);font-display:swap}
 @font-face{font-family:Barlow;font-weight:900;src:url(fonts/Barlow-ExtraBold.woff2)format(woff2),url(fonts/Barlow-ExtraBold.woff)format(woff);font-display:swap}
 ::selection{background:orange}
 a{padding:7px 14px 4px 10px;margin:-5px -8px -5px -10px;border-radius:16px;text-decoration-color:#aaa}
-a:hover{background:#000;color:#fff;border-color:#777;text-decoration-color:#000}
+a:hover{background:#111;color:#eee;border-color:#777;text-decoration-color:#111}
 .icon:hover{background:0;opacity:.5}
 .icon{padding:5px;height:28px}
 li{list-style:none;padding:4px 10px;margin:0 -10px}
 li a,.box,q,cite,img,.logo{display:block}
 .footer a,.header div,.navbut a,.main>h2{display:inline-block}
 li,h2,.title{width:fit-content}
-.header ul{padding:5px;background:#d0d0d0;border-radius:30px;width:clamp(103px,230vw - 1280px, 471px);line-height:clamp(12px,230vw - 1280px,20px)}
+.header ul{padding:5px;background:#d0d0d0;border-radius:30px;width:clamp(103px,230vw - 1280px,471px);line-height:clamp(12px,230vw - 1280px,20px)}
 .menu li{display:inline-block;margin:0;padding:0}
 .menu a{padding:18px 24px 16px;margin:0;border-radius:26px}
-.menu a:hover{background:#bbb;color:#000}
+.menu a:hover{background:#bbb;color:#111}
 .menu a:active{background:#aaa}
 .menu{padding:2ex;padding:clamp(4%,175vw - 1280px,50px);float:right}
-.logo{padding:0;transition:filter .75s}
+.logo{padding:0;transition:filter .75s;border-radius:0}
 .logo:hover{filter:saturate(99)}
 .header{max-width:780px}
 .layout{padding:2ex;padding:min(4%,26px);max-width:720px}
@@ -62,7 +62,7 @@ hr,.borderless{border:0}
 figcaption{padding:10px 4%;background:#c4c4c4;margin-top:8px;border-radius:24px}
 q,cite{margin:16px 0}
 .navbut{margin:0}.navbut a:hover{background:#aaa}.navbut a:active{background:#999}
-.navbut a{padding:18px 26px 16px;margin:16px 12px 0 0;border-radius:32px;color:#000}
+.navbut a{padding:18px 26px 16px;margin:16px 12px 0 0;border-radius:32px;color:#111}
 .navbut a img{display:inline;height:18px;border-radius:0}
 .prev{background:#ccc}
 .up{background:#d0d0d0}
@@ -74,8 +74,9 @@ pre{padding:21px 4%;overflow:auto;background:#333;font-size:.9rem;border-radius:
 code{font-family:monospace}
 q{font-size:large}
 img,iframe{max-width:100%;height:auto}
-.main img, .main figure{border-radius:28px}
+.main img,.main figure{border-radius:28px}
 picture img{width:auto}
 .highlight{margin:16px 0 16px -26px;margin-left:calc(-1 * min(4vw,26px));border-radius:0 28px 28px 0 !important}
 kbd{border:1px solid;padding:4px 14px 3px;border-radius:10px;border-bottom:2px solid;background:#c4c4c4;border-color:grey;margin-left:4px;font-size:large}
 .underline{color:inherit;text-decoration:underline;text-decoration-color:inherit;text-decoration-thickness:2px}
+@media (prefers-color-scheme: dark){.layout,.clickbox img,.main > img,figure img,.menu{filter:invert(1)}body{background:#222}.logo{content:url(/img/assets/Logo_Dark.svg);}}
