--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ a:hover{background:#111;color:#eee;border-color:#777;text-decoration-color:#111}
 .icon{padding:5px;height:28px}
 li{list-style:none;padding:4px 10px;margin:0 -10px}
 li a,.box,q,cite,img,.logo{display:block}
-.footer a,.header div,.navbut a,.main>h2{display:inline-block}
+.footer a,.header div,.navbut a,.main>h2,kbd{display:inline-block}
 li,h2,.title{width:fit-content}
 .header ul{padding:5px;background:#d0d0d0;border-radius:30px;width:clamp(103px,230vw - 1280px,471px);line-height:clamp(12px,230vw - 1280px,20px)}
 .menu li{display:inline-block;margin:0;padding:0}
@@ -49,14 +49,14 @@ p a{text-decoration:underline;text-decoration-thickness:2px;padding:9px 5px 5px;
 figure{max-width:720px}
 .clickbox:active{background:#bbb;
 	scale:.99}
-.box ul{line-height:175%;padding:12px 5% 14px;background:#d0d0d0}
+.box ul{line-height:175%;padding:12px 5% 18px;background:#d0d0d0}
 .listbox{padding:0;overflow:hidden;background:#c4c4c4}
 .listbox div{padding:16px 5% 14px}
 .listbox p{margin-bottom:0}
-summary{cursor:pointer;padding:12px 3% 12px 9px;margin:8px;background:#b3b3b3;border-radius:20px;list-style:none}
+summary{cursor:pointer;padding:0 3% 0 9px;margin:8px;background:#b3b3b3;border-radius:20px;list-style:none;line-height:45px;height:43px}
 summary:hover{filter:brightness(.95)}
 summary:active{filter:brightness(.9)}
-.footer summary{width:fit-content;margin:0;border-radius:24px;background:#9f9f9f;height:43px;padding:0 10px 0 18px;line-height:43px;list-style:none}
+.footer summary{width:fit-content;margin:0;border-radius:24px;background:#9f9f9f;padding:0 10px 0 18px}
 details>summary:before{content:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='13' height='13' fill='%23111'%3E%3Crect width='13' height='3' y='5' rx='1'/%3E%3Crect width='3' height='13' x='5' rx='1'/%3E%3C/svg%3E");margin:0 8px}
 details[open]>summary:before{content:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='13' height='13' fill='%23111'%3E%3Crect width='13' height='3' y='5' rx='1'/%3E%3C/svg%3E%0A");}
 .text{background:#c4c4c4;border-left:16px solid #b2b2b2}
@@ -80,6 +80,6 @@ img,iframe{max-width:100%;height:auto}
 .main img,.main figure{border-radius:28px}
 picture img{width:auto}
 .highlight{margin:16px 0 16px -26px;margin-left:calc(-1 * min(4vw,26px));border-radius:0 28px 28px 0 !important}
-kbd{border:1px solid;padding:4px 14px 3px;border-radius:10px;border-bottom:2px solid;background:#c4c4c4;border-color:grey;margin-left:4px;font-size:large}
+kbd{border:1px solid;padding:4px 14px 3px;border-radius:10px;border-bottom:2px solid;background:#c4c4c4;border-color:grey;margin-left:4px;font-size:large;text-indent:0;line-height:1}
 .underline{color:inherit;text-decoration:underline;text-decoration-color:inherit;text-decoration-thickness:2px}
 @media (prefers-color-scheme: dark){.layout,.clickbox img,.main > img,figure img,.menu{filter:invert(1)}body{background:#222}.logo{content:url(/img/assets/Logo_Dark.svg)}}
